--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img class="imge" src="/Img/1.gif" alt="" />
+      <img class="imge" src="Img/1.gif" alt="" />
       <h1>¿Te gustaria salir conmigo? 🥰</h1>
       <p>Eres la persona mas especial del mundo</p>
       <div class="btn">
