--- a/no1.html
+++ b/no1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img class="imge" src="/Img/no.gif" alt="" />
+      <img class="imge" src="Img/no.gif" alt="" />
       <h1>¿Estas Segura? Piensalo bien 😥</h1>
       <div class="btn">
         <a href="si.html">SI</a>
