--- a/no2.html
+++ b/no2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img class="imge" src="/Img/noo.gif" alt="" />
+      <img class="imge" src="Img/noo.gif" alt="" />
       <h1>Seras mia a las buenas o a las malas 😈</h1>
       <div class="btn">
         <a href="si.html">SI</a>
