--- a/si.html
+++ b/si.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img class="imge" src="/Img/si.gif" alt="" />
+      <img class="imge" src="Img/si.gif" alt="" />
       <h1>Heheheh, Lo sabia!!!</h1>
     </div>
   </body>
